Fix shifting from no scroll bar

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -10,6 +10,8 @@ html {
   background-color: $background-color;
   font-size: 16px;
 
+  margin-left: calc(100vw - 100%);
+
   @include md {
     font-size: 18px;
   }
